<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coin Toss</string>
    <string name="app_title">Flip the coin</string>
    <string name="action_settings">Settings</string>
    <string name="app_instruct">Press the button to flip the coin\n (Note: you may need to press several times to see it flip).</string>
    <string name="button_label">Flip It!</string>
    <string name="heads_label">Heads</string>
    <string name="tails_label">Tails</string>
    <string name="tails_value">0</string>
    <string name="heads_value">0</string>

</resources>
